--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<button type="button">Sign up</button>
 			</div>
 			<div class="image" style="float-right">
-				<img src="2.png" alt="Eagle">
+				<img src="2.png" alt="">
 			</div>
 		</div>
 		
